# website

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  common.css  common.js  deploy.sh  flake.nix  index.html  justfile  mainstyle.css  style.css
common/: common.css  navbar.css  navbar.js
dev/: index.html  main.js  style.css
font/: Bit5x3.eot
home/: index.html  style.css
krimskrams/: index.html
krimskrams/bibliothek/: index.html  style.css
krimskrams/cheatsheets/: index.html
misc/: index.html
modules/: contentblock.css  contentblock.js  navbar.css  navbar.js
projekte/: index.html  style.css
src/: main.rs
src/pong/: math.rs  mod.rs
