[package]
name = "pong-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.5.4", features = ["csr", "tracing"] }
leptos-use = "0.9.0"
log = "0.4.20"
web-sys = { version = "0.3.66", features = ["CanvasRenderingContext2d"] }
